# break-the-loop

./: README.md  pyproject.toml
src/: useless.py
tests/: test_useless.py
