[tool.poetry]
name = "break-the-loop"
version = "0.1.0"
description = "Simple repo to learn how the break statement works in Python"
authors = ["Gabriele Gozzoli <g.gozzoli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
